RESOLVED FIXED134582
[iOS][WK2] Fix small bugs of dynamicViewportSizeUpdate that were causing inaccuracies in the computed target
https://bugs.webkit.org/show_bug.cgi?id=134582
Summary [iOS][WK2] Fix small bugs of dynamicViewportSizeUpdate that were causing inac...
Benjamin Poulain
Reported 2014-07-02 19:13:25 PDT
[iOS][WK2] Fix small bugs of dynamicViewportSizeUpdate that were causing inaccuracies in the computed target
Attachments
Patch (12.92 KB, patch)
2014-07-02 20:22 PDT, Benjamin Poulain
thorton: review+
Benjamin Poulain
Comment 1 2014-07-02 20:22:33 PDT
Tim Horton
Comment 2 2014-07-02 21:07:42 PDT
Comment on attachment 234310 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=234310&action=review > Source/WebKit2/ChangeLog:16 > + The first issue is that the unobscured content size was stored on integer coordinates. Because of that, it was "on" should be "in" > Source/WebKit2/ChangeLog:21 > + on floating point. Since ARM64 does all those computation on double in the UIProcess, the value would be quite computation*s* and double*s* > Source/WebKit2/ChangeLog:27 > + valid to have an exposed rect outside the page bounds, that areas is just under the obscured insets. area, not areas
Benjamin Poulain
Comment 3 2014-07-03 15:12:18 PDT
Note You need to log in before you can comment on or make changes to this bug.